---
source: tests/trace_solver.rs
info:
  options:
    match_constructor_through_ref: true
    eat_inherited_ref_alone: false
    inherited_ref_on_ref: EatOuter
    fallback_to_outer: false
    allow_ref_pat_on_ref_mut: true
    simplify_deref_mut: true
    downgrade_mut_inside_shared: false
    eat_mut_inside_shared: true
    ref_binding_on_inherited: AllocTemporary
    mut_binding_on_inherited: Keep
  bundle_name: ~
  request: "[&x]: &[[T]]"
---
[&x] @ s: &[[T]]
// Applying rule `ConstructorRef`
&x @ &(*s).0: &[T]
// Type error for `&x @ &(*s).0: &[T]`: InheritedRefIsAlone
